Auto fix CSS indentions ADMIN CSS

--- a/css/admin_css/dataTables.bootstrap_studAcc.css
+++ b/css/admin_css/dataTables.bootstrap_studAcc.css
@@ -41,16 +41,12 @@ div.dataTables_paginate ul.pagination {
 }
 
 @media screen and (max-width: 767px) {
-    div.dataTables_length,
-    div.dataTables_filter,
-    div.dataTables_info,
-    div.dataTables_paginate {
+    div.dataTables_length, div.dataTables_filter, div.dataTables_info, div.dataTables_paginate {
         text-align: center;
     }
 }
 
-table.dataTable td,
-table.dataTable th {
+table.dataTable td, table.dataTable th {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
@@ -63,20 +59,18 @@ table.dataTable {
     max-width: none !important;
 }
 
-table.dataTable thead .sorting,
-table.dataTable thead .sorting_asc,
-table.dataTable thead .sorting_desc,
-table.dataTable thead .sorting_asc_disabled,
-table.dataTable thead .sorting_desc_disabled {
+table.dataTable thead .sorting, table.dataTable thead .sorting_asc, table.dataTable thead .sorting_desc, table.dataTable thead .sorting_asc_disabled, table.dataTable thead .sorting_desc_disabled {
     cursor: pointer;
 }
 
 table.dataTable thead .sorting {
     background: url("../../img/sort_both.png") no-repeat center right;
 }
+
 table.dataTable thead .sorting_asc {
     background: url("../../img/sort_asc.png") no-repeat center right;
 }
+
 table.dataTable thead .sorting_desc {
     background: url("../../img/sort_desc.png") no-repeat center right;
 }
@@ -84,11 +78,12 @@ table.dataTable thead .sorting_desc {
 table.dataTable thead .sorting_asc_disabled {
     background: url("../../img/sort_asc_disabled.png") no-repeat center right;
 }
+
 table.dataTable thead .sorting_desc_disabled {
     background: url("../../img/sort_desc_disabled.png") no-repeat center right;
 }
 
-table.dataTable thead > tr > th {
+table.dataTable thead>tr>th {
     padding-left: 18px;
     padding-right: 18px;
 }
@@ -98,14 +93,14 @@ table.dataTable th:active {
 }
 
 /* Scrolling */
+
 div.dataTables_scrollHead table {
     margin-bottom: 0 !important;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
 
-div.dataTables_scrollHead table thead tr:last-child th:first-child,
-div.dataTables_scrollHead table thead tr:last-child td:first-child {
+div.dataTables_scrollHead table thead tr:last-child th:first-child, div.dataTables_scrollHead table thead tr:last-child td:first-child {
     border-bottom-left-radius: 0 !important;
     border-bottom-right-radius: 0 !important;
 }
@@ -116,8 +111,7 @@ div.dataTables_scrollBody table {
     margin-bottom: 0 !important;
 }
 
-div.dataTables_scrollBody tbody tr:first-child th,
-div.dataTables_scrollBody tbody tr:first-child td {
+div.dataTables_scrollBody tbody tr:first-child th, div.dataTables_scrollBody tbody tr:first-child td {
     border-top: none;
 }
 
@@ -130,23 +124,25 @@ div.dataTables_scrollFoot table {
    width calculations when using scrolling impossible to align columns. We have
    to use separate
  */
+
 table.table-bordered.dataTable {
     border-collapse: separate !important;
 }
-table.table-bordered thead th,
-table.table-bordered thead td {
+
+table.table-bordered thead th, table.table-bordered thead td {
     border-left-width: 0;
     border-top-width: 0;
 }
-table.table-bordered tbody th,
-table.table-bordered tbody td {
+
+table.table-bordered tbody th, table.table-bordered tbody td {
     border-left-width: 0;
     border-bottom-width: 0;
 }
-table.table-bordered th:last-child,
-table.table-bordered td:last-child {
+
+table.table-bordered th:last-child, table.table-bordered td:last-child {
     border-right-width: 0;
 }
+
 div.dataTables_scrollHead table.table-bordered {
     border-bottom-width: 0;
 }
@@ -154,24 +150,21 @@ div.dataTables_scrollHead table.table-bordered {
 /*
  * TableTools styles
  */
-.table.dataTable tbody tr.active td,
-.table.dataTable tbody tr.active th {
+
+.table.dataTable tbody tr.active td, .table.dataTable tbody tr.active th {
     background-color: #08c;
     color: white;
 }
 
-.table.dataTable tbody tr.active:hover td,
-.table.dataTable tbody tr.active:hover th {
+.table.dataTable tbody tr.active:hover td, .table.dataTable tbody tr.active:hover th {
     background-color: #0075b0 !important;
 }
 
-.table.dataTable tbody tr.active th > a,
-.table.dataTable tbody tr.active td > a {
+.table.dataTable tbody tr.active th>a, .table.dataTable tbody tr.active td>a {
     color: white;
 }
 
-.table-striped.dataTable tbody tr.active:nth-child(odd) td,
-.table-striped.dataTable tbody tr.active:nth-child(odd) th {
+.table-striped.dataTable tbody tr.active:nth-child(odd) td, .table-striped.dataTable tbody tr.active:nth-child(odd) th {
     background-color: #017ebc;
 }
 
@@ -188,7 +181,8 @@ ul.DTTT_dropdown.dropdown-menu {
 }
 
 ul.DTTT_dropdown.dropdown-menu a {
-    color: #333 !important; /* needed only when demo_page.css is included */
+    color: #333 !important;
+    /* needed only when demo_page.css is included */
 }
 
 ul.DTTT_dropdown.dropdown-menu li {
@@ -205,6 +199,7 @@ div.DTTT_collection_background {
 }
 
 /* TableTools information display */
+
 div.DTTT_print_info {
     position: fixed;
     top: 50%;
@@ -217,11 +212,9 @@ div.DTTT_print_info {
     color: #333;
     padding: 10px 30px;
     opacity: 0.95;
-
     background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 6px;
-
     -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
     box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
 }
@@ -262,17 +255,13 @@ div.dataTables_processing {
 /*
  * FixedColumns styles
  */
-div.DTFC_LeftHeadWrapper table,
-div.DTFC_LeftFootWrapper table,
-div.DTFC_RightHeadWrapper table,
-div.DTFC_RightFootWrapper table,
-table.DTFC_Cloned tr.even {
+
+div.DTFC_LeftHeadWrapper table, div.DTFC_LeftFootWrapper table, div.DTFC_RightHeadWrapper table, div.DTFC_RightFootWrapper table, table.DTFC_Cloned tr.even {
     background-color: white;
     margin-bottom: 0;
 }
 
-div.DTFC_RightHeadWrapper table,
-div.DTFC_LeftHeadWrapper table {
+div.DTFC_RightHeadWrapper table, div.DTFC_LeftHeadWrapper table {
     border-bottom: none !important;
     margin-bottom: 0 !important;
     border-top-right-radius: 0 !important;
@@ -280,29 +269,21 @@ div.DTFC_LeftHeadWrapper table {
     border-bottom-right-radius: 0 !important;
 }
 
-div.DTFC_RightHeadWrapper table thead tr:last-child th:first-child,
-div.DTFC_RightHeadWrapper table thead tr:last-child td:first-child,
-div.DTFC_LeftHeadWrapper table thead tr:last-child th:first-child,
-div.DTFC_LeftHeadWrapper table thead tr:last-child td:first-child {
+div.DTFC_RightHeadWrapper table thead tr:last-child th:first-child, div.DTFC_RightHeadWrapper table thead tr:last-child td:first-child, div.DTFC_LeftHeadWrapper table thead tr:last-child th:first-child, div.DTFC_LeftHeadWrapper table thead tr:last-child td:first-child {
     border-bottom-left-radius: 0 !important;
     border-bottom-right-radius: 0 !important;
 }
 
-div.DTFC_RightBodyWrapper table,
-div.DTFC_LeftBodyWrapper table {
+div.DTFC_RightBodyWrapper table, div.DTFC_LeftBodyWrapper table {
     border-top: none;
     margin: 0 !important;
 }
 
-div.DTFC_RightBodyWrapper tbody tr:first-child th,
-div.DTFC_RightBodyWrapper tbody tr:first-child td,
-div.DTFC_LeftBodyWrapper tbody tr:first-child th,
-div.DTFC_LeftBodyWrapper tbody tr:first-child td {
+div.DTFC_RightBodyWrapper tbody tr:first-child th, div.DTFC_RightBodyWrapper tbody tr:first-child td, div.DTFC_LeftBodyWrapper tbody tr:first-child th, div.DTFC_LeftBodyWrapper tbody tr:first-child td {
     border-top: none;
 }
 
-div.DTFC_RightFootWrapper table,
-div.DTFC_LeftFootWrapper table {
+div.DTFC_RightFootWrapper table, div.DTFC_LeftFootWrapper table {
     border-top: none;
     margin-top: 0 !important;
 }
@@ -310,6 +291,7 @@ div.DTFC_LeftFootWrapper table {
 /*
  * FixedHeader styles
  */
+
 div.FixedHeader_Cloned table {
     margin: 0 !important;
 }
