--- a/css/admin_css/style1_monitor.css
+++ b/css/admin_css/style1_monitor.css
@@ -1,32 +1,35 @@
-*{
+* {
   margin: 0;
   padding: 0;
   user-select: none;
   box-sizing: border-box;
   /* font-family: Roboto,Roboto Condensed,Generica, sans-serif; */
-  list-style: none;  
+  list-style: none;
 }
-body{  
-  font-family: Roboto,Roboto Thin,Generica, sans-serif;  
+
+body {
+  font-family: Roboto, Roboto Thin, Generica, sans-serif;
   background-image: url("../../img/adminBG.png");
   background-size: cover;
   font-size: 100%;
   background-attachment: fixed;
   width: auto;
 }
-nav{
+
+nav {
   background: #1d6986;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, .15 ),
-              0 3px 6px rgba(0, 0, 0, .23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .15), 0 3px 6px rgba(0, 0, 0, .23);
   width: auto;
   z-index: 3;
 }
-nav:after{
+
+nav:after {
   content: '';
   clear: both;
   display: table;
 }
-nav h2{
+
+nav h2 {
   font-family: Roboto Regular, sans-serif;
   font-weight: inherit;
   font-size: 100%;
@@ -34,7 +37,8 @@ nav h2{
   letter-spacing: 6px;
   color: #ffffff;
 }
-nav h3{
+
+nav h3 {
   margin-top: 0px;
   color: #ffffff;
   padding-top: 5px;
@@ -45,15 +49,16 @@ nav h3{
   font-family: Generica regular, sans-serif;
 }
 
-nav .logo{
+nav .logo {
   float: left;
   position: relative;
   line-height: 80px;
   margin-top: 5px;
   margin-left: 40px;
-  color:#ffffff;
+  color: #ffffff;
 }
-nav ul{
+
+nav ul {
   float: right;
   padding: 0;
   height: 80px;
@@ -64,7 +69,8 @@ nav ul{
   text-align: center;
   z-index: 4;
 }
-nav ul li{
+
+nav ul li {
   float: left;
   display: inline-block;
   height: 80px;
@@ -73,7 +79,8 @@ nav ul li{
   /* margin: 0 5px; */
   width: 150px;
 }
-nav ul li a{
+
+nav ul li a {
   color: rgb(255, 255, 255);
   line-height: 70px;
   text-decoration: none;
@@ -82,24 +89,30 @@ nav ul li a{
   letter-spacing: 1px;
   font-family: Roboto Light, sans-serif;
 }
+
 nav ul li a:visited {
   color: #ffffff;
   text-decoration: none;
 }
-nav ul li a:hover{
+
+nav ul li a:hover {
   color: #ffc423;
   text-decoration: none;
 }
-nav ul li a:active{
+
+nav ul li a:active {
   text-decoration: none;
 }
-nav ul li:hover{
+
+nav ul li:hover {
   background-color: #124254;
 }
+
 nav ul li a:active {
   color: green;
 }
-nav ul ul{
+
+nav ul ul {
   position: absolute;
   top: 90px;
   border-top: 3px solid #124254;
@@ -107,56 +120,68 @@ nav ul ul{
   visibility: hidden;
   transition: top .3s;
 }
-nav ul ul li{
- height: 50px;
- position: relative;
- margin: 0px;
- float: none;
- display: list-item;
+
+nav ul ul li {
+  height: 50px;
+  position: relative;
+  margin: 0px;
+  float: none;
+  display: list-item;
 }
-nav ul ul li a{
+
+nav ul ul li a {
   line-height: 50px;
 }
+
 nav ul ul li .logout::before {
   content: "\f2f5";
   font-family: "Font Awesome 5 Free";
   padding: 0 10px 0 0;
 }
-nav ul ul li a:link{
-  color:rgb(0, 0, 0);
+
+nav ul ul li a:link {
+  color: rgb(0, 0, 0);
 }
+
 nav ul ul li a:visited {
   color: black;
   text-decoration: none;
 }
-nav ul ul li a:hover{
+
+nav ul ul li a:hover {
   color: #1b1b1b;
   box-shadow: none;
   text-decoration: none;
 }
-nav ul ul li:hover{
+
+nav ul ul li:hover {
   background-color: #e0a900;
   text-decoration: none;
 }
-nav ul ul li a:active{
+
+nav ul ul li a:active {
   color: #1b1b1b;
   box-shadow: none;
   text-decoration: none;
 }
-nav ul ul ul{
+
+nav ul ul ul {
   border-top: none;
 }
-nav ul ul ul li{
+
+nav ul ul ul li {
   position: relative;
   top: -60px;
   left: 150px;
 }
-nav ul li:hover > ul{
+
+nav ul li:hover>ul {
   top: 70px;
   opacity: 1;
   visibility: visible;
 }
-nav ul ul li{
+
+nav ul ul li {
   background: #ffc423;
   position: relative;
   margin: 0px;
@@ -164,29 +189,33 @@ nav ul ul li{
   font-size: 0.8em;
   float: none;
   display: list-item;
-  border-bottom: 1px solid rgba(0,0,0,0.3);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   z-index: 1;
 }
-nav ul ul li a{
+
+nav ul ul li a {
   line-height: 50px;
   font-family: Roboto bold, sans-serif;
 }
-nav ul ul ul li{
+
+nav ul ul ul li {
   position: relative;
   font-size: 1em;
   top: -60px;
   left: 150px;
 }
-.show,.icon,input{
+
+.show, .icon, input {
   display: none;
 }
+
 /* .fa-plus{
   font-size: 15px;
   margin-left: 40px;
 } */
 
 @media all and (max-width: 968px) {
-  nav ul{
+  nav ul {
     margin-right: 0px;
     margin-left: 0px;
     float: left;
@@ -196,17 +225,17 @@ nav ul ul ul li{
     width: auto;
     float: left;
   } */
-  .show + a, ul{
+  .show+a, ul {
     display: none;
   }
-  nav ul li,nav ul ul li{
+  nav ul li, nav ul ul li {
     display: block;
     width: 100%;
   }
-  nav ul li a:hover{
+  nav ul li a:hover {
     box-shadow: none;
   }
-  .show{
+  .show {
     display: block;
     color: #ffffff;
     font-size: 1.2em;
@@ -214,12 +243,12 @@ nav ul ul ul li{
     line-height: 70px;
     cursor: pointer;
   }
-  .show:hover{
-    color:white;
+  .show:hover {
+    color: white;
   }
-  .icon{
+  .icon {
     display: block;
-    color:#ffffff;
+    color: #ffffff;
     position: absolute;
     top: 0;
     right: 40px;
@@ -227,7 +256,7 @@ nav ul ul ul li{
     cursor: pointer;
     font-size: 25px;
   }
-  nav ul ul{
+  nav ul ul {
     top: 70px;
     border-top: 0px;
     border-bottom: 0px;
@@ -237,7 +266,7 @@ nav ul ul ul li{
     opacity: 1;
     visibility: visible;
   }
-  nav ul ul a{
+  nav ul ul a {
     left: 0;
   }
   /* nav ul ul ul a{
@@ -246,22 +275,23 @@ nav ul ul ul li{
   nav ul ul ul li{
     position: static;
   } */
-  [id^=btn]:checked + ul{
+  [id^=btn]:checked+ul {
     width: 100%;
     left: 0;
     display: block;
   }
-  nav ul ul li{
+  nav ul ul li {
     border-top: 0px;
     border-bottom: 0px;
   }
-  span.cancel:before{
+  span.cancel:before {
     content: '\f00d';
   }
-  
 }
+
 /*ballesteros*/
-nav h4{
+
+nav h4 {
   font-family: Roboto Regular, sans-serif;
   font-weight: inherit;
   font-size: 100%;
@@ -269,9 +299,10 @@ nav h4{
   letter-spacing: 6px;
   color: #ffffff;
   padding-top: 15px;
-  font-size:15px;
+  font-size: 15px;
 }
-nav h5{
+
+nav h5 {
   font-size: 20px;
   margin-top: 0px;
   color: #ffffff;
@@ -282,179 +313,199 @@ nav h5{
   letter-spacing: 6px;
   font-family: Generica regular, sans-serif;
 }
-.cnavie ul li a{
+
+.cnavie ul li a {
   font-size: 1.05em;
-
 }
-  .cheader {
-    z-index: 100;
-    padding: 1px 1px;
-    font-size: 35px;
-    background: #124254;
-    color: #f1f1f1;
-    width: 100%;
-    text-align: center;
-    font-family: Roboto Regular, sans-serif;
-    letter-spacing: 6px;
-  }
-  
-  
-  .pagination>li {
-    display: inline;
-    padding:0px ;
-    margin:0px ;
-    border:none ;
 
-    }
-  .pagination > li > a, .pagination > li > span{background-color:#EEEEEE !important}
-  .pagination > li.active > a, .pagination > li.active > span{background-color:#124254 !important}
+.cheader {
+  z-index: 100;
+  padding: 1px 1px;
+  font-size: 35px;
+  background: #124254;
+  color: #f1f1f1;
+  width: 100%;
+  text-align: center;
+  font-family: Roboto Regular, sans-serif;
+  letter-spacing: 6px;
+}
 
-  .modal-backdrop {
-      z-index: -1!important;
-    }
+.pagination>li {
+  display: inline;
+  padding: 0px;
+  margin: 0px;
+  border: none;
+}
 
-    iframe
-    {
-        height:700px ;
-    }
-    
-    .btn {
-    font-family: Roboto Regular, sans-serif;
-    display: inline-block;
-    padding: 6px 12px ;
-    margin: 0px;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.42857143;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-image: none;
-    border: 1px solid transparent;
-    }
-    
-    .btn-primary {
-    color: #fff ;
-    margin: 0px;
-    padding: 0px;
-    background: #5cb85c!important;
-    border-color: #5cb85c!important;
-    box-shadow:none ;
-    }
-    .btn-danger {
-    color: #fff ;
-    margin: 0px;
-    padding: 0px;
-    background: #d9534f!important;
-    border-color: #d9534f!important;
-    box-shadow:none ;
-    }
-    .btn-button1{
-    color: #eeeeee ;
-    padding: 0px;
-    background: #124254 ;
-    border-color: #124254;
-    box-shadow:none ; 
-    padding: 10px 20px;
-    margin: 25px 5px 15px 0px!important;      
-    }
-    .btn-button2{
-      color: #eeeeee ;
-      margin: 0px;
-      padding: 0px;
-      background: #124254 ;
-      border-color: #124254;
-      box-shadow:none ; 
-      padding: 10px 20px;
-      margin: 25px 0px 15px 0px!important;      
-      }    
-   #save{
-      color:#fff;
-      background: #124254;
-      margin-bottom: 5px; 
-   }
+.pagination>li>a, .pagination>li>span {
+  background-color: #EEEEEE !important
+}
 
-   #cancel{
-      background-color:#dddddd;
-      margin:auto;
+.pagination>li.active>a, .pagination>li.active>span {
+  background-color: #124254 !important
+}
 
-   }
-   #continue{
-      background-color: #d9534f;
-      color:#fff;
-   }
-   #cancel2{
-      background-color: #dddddd;
-   }
-   #go{
-    color:#fff;
-    background: #124254;
-   }
+.modal-backdrop {
+  z-index: -1!important;
+}
 
-.container{
-    background-color:#f5f5f5;
-    margin: 30px 15px 25px 15px;
-    border: 2px solid #124254;
+iframe {
+  height: 700px;
+}
+
+.btn {
+  font-family: Roboto Regular, sans-serif;
+  display: inline-block;
+  padding: 6px 12px;
+  margin: 0px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+}
+
+.btn-primary {
+  color: #fff;
+  margin: 0px;
+  padding: 0px;
+  background: #5cb85c!important;
+  border-color: #5cb85c!important;
+  box-shadow: none;
+}
+
+.btn-danger {
+  color: #fff;
+  margin: 0px;
+  padding: 0px;
+  background: #d9534f!important;
+  border-color: #d9534f!important;
+  box-shadow: none;
+}
+
+.btn-button1 {
+  color: #eeeeee;
+  padding: 0px;
+  background: #124254;
+  border-color: #124254;
+  box-shadow: none;
+  padding: 10px 20px;
+  margin: 25px 5px 15px 0px!important;
+}
+
+.btn-button2 {
+  color: #eeeeee;
+  margin: 0px;
+  padding: 0px;
+  background: #124254;
+  border-color: #124254;
+  box-shadow: none;
+  padding: 10px 20px;
+  margin: 25px 0px 15px 0px!important;
+}
+
+#save {
+  color: #fff;
+  background: #124254;
+  margin-bottom: 5px;
+}
+
+#cancel {
+  background-color: #dddddd;
+  margin: auto;
+}
+
+#continue {
+  background-color: #d9534f;
+  color: #fff;
+}
+
+#cancel2 {
+  background-color: #dddddd;
+}
+
+#go {
+  color: #fff;
+  background: #124254;
+}
+
+.container {
+  background-color: #f5f5f5;
+  margin: 30px 15px 25px 15px;
+  border: 2px solid #124254;
 }
 
 /* Extra small devices (phones, 600px and down) */
+
 @media only screen and (max-width: 600px) {
-  .container {margin: 0px 0px 0px 0px;;}                     
+  .container {
+    margin: 0px 0px 0px 0px;
+    ;
   }
+}
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
+
 @media only screen and (max-width: 768px) {
-  .container {margin: 0px 0px 0px 0px;}
-}
- #datatable {
-
-    width: 100%;
-    border: 2px solid #124254;
-    font-family: Roboto regular, sans-serif;
-    border-collapse: collapse;
-    table-layout: auto;
-    margin:0px;
-    text-align: center;
+  .container {
+    margin: 0px 0px 0px 0px;
   }
-
-  table.center {
-    margin-left:auto; 
-    margin-right:auto;
-    }
-  thead {
-    border: 1px solid #124254;
-    color: #EEEEEE;
-    background-color: #18566e;
-    text-align: center;
-  }
-  tbody {
-    border: 1px solid #124254;
-    }
-  th {
-      font-size: large;
-      border: 1px solid #124254;
-      color: #EEEEEE;
-      background-color: #18566e;
-      text-align: center;
-
-    }
-  td {
-      font-size: large;
-      border: 1px solid #124254;
-      padding: 0px;
-      max-width: 150px;
-      max-height: 150px;
-      overflow: hidden;
 }
 
-article p{
+#datatable {
+  width: 100%;
+  border: 2px solid #124254;
+  font-family: Roboto regular, sans-serif;
+  border-collapse: collapse;
+  table-layout: auto;
+  margin: 0px;
+  text-align: center;
+}
+
+table.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+thead {
+  border: 1px solid #124254;
+  color: #EEEEEE;
+  background-color: #18566e;
+  text-align: center;
+}
+
+tbody {
+  border: 1px solid #124254;
+}
+
+th {
+  font-size: large;
+  border: 1px solid #124254;
+  color: #EEEEEE;
+  background-color: #18566e;
+  text-align: center;
+}
+
+td {
+  font-size: large;
+  border: 1px solid #124254;
+  padding: 0px;
+  max-width: 150px;
+  max-height: 150px;
+  overflow: hidden;
+}
+
+article p {
   font-family: Roboto regular, sans-serif;
   color: white;
   font-weight: inherit;
@@ -462,7 +513,8 @@ article p{
   letter-spacing: 3px;
   position: relative;
 }
-article h1{
+
+article h1 {
   font-family: Generica regular, sans-serif;
   color: #ffc423;
   font-weight: inherit;
@@ -471,37 +523,45 @@ article h1{
   letter-spacing: 3px;
   margin-top: 10px;
 }
+
 /* Style the content */
+
 article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
   padding: 10px;
 }
+
 /*For logos on top of welcome banner*/
-img.logos{
+
+img.logos {
   float: left;
   padding-left: 10px;
   height: 90px;
   width: 100px;
   margin-bottom: 2em;
 }
-.logo-container{
-  position:relative;
+
+.logo-container {
+  position: relative;
   /* float: left; */
   display: -webkit-flex;
   display: flex;
   margin-left: 0px;
   margin-top: 0px;
   max-width: 700px;
-} 
+}
+
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
+
 @media (max-width: 600px) {
   body, section, .container {
     -webkit-flex-direction: column;
     flex-direction: column;
   }
 }
+
 .footer {
   position: fixed;
   left: 0;
@@ -511,9 +571,10 @@ img.logos{
   padding: .4px;
   background-color: #124254;
   text-align: center;
-  z-index:999999;
+  z-index: 999999;
 }
-div p.footer-txt{
+
+div p.footer-txt {
   position: relative;
   top: .5em;
   font-family: Roboto Regular, sans-serif;
@@ -521,11 +582,13 @@ div p.footer-txt{
   font-size: 0.7em;
   color: #ffffff;
 }
-nav img.user-profile{
+
+nav img.user-profile {
   margin-top: 0;
   height: 40px;
   width: 40px;
 }
+
 .ccheader {
   padding: 15px 0 3px 0;
   color: #f1f1f1;
@@ -535,70 +598,73 @@ nav img.user-profile{
   letter-spacing: 7px;
 }
 
+<!--Message Box--> ::-webkit-scrollbar {
+  width: 15px;
+}
 
-  
-  <!--Message Box-->
-  ::-webkit-scrollbar {
-    width: 15px;
-  }
-  
-  ::-webkit-scrollbar-track {
-    width: 5px;
-    background: #f5f5f5;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    width: 1em;
-    background-color: #ddd;
-    outline: 1px solid black;
-    border-radius: 1rem;
-  }
-  #top{
-    border:none;
-    background-color: #124254!important;
-  }
-  #receive{
-    background-color: #124254!important;
-  }
-  .btn-link{
-    color: #124254!important;
-    font-size: 1.0rem!important;
-  }
-  #recent{
-    color: #124254!important;
-    font-weight: bold;
-  }
-  
-  .text-small {
-    font-family: Roboto regular,sans-serif;
-    font-size: 1rem;
-  }
-  
-  .messages-box,
-  .chat-box {
-    height: 390px;
-    overflow-y: scroll;
-  }
-  
-  .rounded-lg {
-    border-radius: 0.5rem;
-  }
-  
-  input::placeholder {
-    font-size: 1.0rem;
-    color: #999;
-  }
-  .cname{
-    font-weight: bold;
-    font-size: 1rem;
-    margin-bottom: 0;
+::-webkit-scrollbar-track {
+  width: 5px;
+  background: #f5f5f5;
+}
 
-  }
-.cmessage{
+::-webkit-scrollbar-thumb {
+  width: 1em;
+  background-color: #ddd;
+  outline: 1px solid black;
+  border-radius: 1rem;
+}
+
+#top {
+  border: none;
+  background-color: #124254!important;
+}
+
+#receive {
+  background-color: #124254!important;
+}
+
+.btn-link {
+  color: #124254!important;
+  font-size: 1.0rem!important;
+}
+
+#recent {
+  color: #124254!important;
+  font-weight: bold;
+}
+
+.text-small {
+  font-family: Roboto regular, sans-serif;
+  font-size: 1rem;
+}
+
+.messages-box, .chat-box {
+  height: 390px;
+  overflow-y: scroll;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+input::placeholder {
+  font-size: 1.0rem;
+  color: #999;
+}
+
+.cname {
+  font-weight: bold;
+  font-size: 1rem;
+  margin-bottom: 0;
+}
+
+.cmessage {
   font-size: 0.9rem;
 }
+
 /* Vote Status Percentage */
-.Bvotestat p{
+
+.Bvotestat p {
   font-family: Roboto black;
   color: #ffc423;
   font-weight: inherit;
@@ -607,24 +673,27 @@ nav img.user-profile{
   letter-spacing: 3px;
   text-align: center;
   margin-top: 25px;
-  z-index:-1000;
- }
-.Bcon{
-    display: flex;
-    margin-left: 230px;
-    margin-top: 90px;
-    max-width: 10px;
+  z-index: -1000;
 }
-.Bvcontainer{
+
+.Bcon {
+  display: flex;
+  margin-left: 230px;
+  margin-top: 90px;
+  max-width: 10px;
+}
+
+.Bvcontainer {
   position: relative;
   width: 900px;
   display: flex;
   justify-content: space-around;
 }
-.Bvcontainer .Bcard{
+
+.Bvcontainer .Bcard {
   position: relative;
   width: 250px;
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   height: 300px;
@@ -633,42 +702,44 @@ nav img.user-profile{
   margin-left: 50px;
   transition: 0.5s;
 }
-.Bvcontainer .Bcard:hover{
+
+.Bvcontainer .Bcard:hover {
   /*transform:translateY(-10px);*/
   box-shadow: 0 15px 35px rgba(160, 137, 10, 0.788);
 }
-.Bvcontainer .Bcard:before{
+
+.Bvcontainer .Bcard:before {
   content: '';
   position: absolute;
   top: 0;
-  left: 0%; 100%;
-  backgro
-  width: 100%;
-  height:und: rgba(73, 163, 0, 0.03);
+  left: 0%;
+  100%;
+  backgro width: 100%;
+  height: und: rgba(73, 163, 0, 0.03);
   pointer-events: none;
-  z-index:1;
+  z-index: 1;
 }
-
 
 /*Vote Status per grade level*/
 
-.table{
- text-align: center;
+.table {
+  text-align: center;
 }
-.Bvs_gradelevel p{
+
+.Bvs_gradelevel p {
   font-family: Roboto black;
   font-size: 20px;
   position: relative;
   letter-spacing: 3px;
   text-align: center;
-  z-index:-1000;
+  z-index: -1000;
   margin-top: -50px;
 }
 
-.Bbtn_goback{
+.Bbtn_goback {
   border: none;
   font-style: Roboto;
-  background-color:white;
+  background-color: white;
   padding: 6px 8px;
   margin-left: 10px;
   font-size: 11px;
@@ -676,42 +747,49 @@ nav img.user-profile{
   border-radius: 20px;
   margin-bottom: 15px;
 }
-.Bnp{
+
+.Bnp {
   margin-top: -12px;
 }
-.Bnp a{
+
+.Bnp a {
   text-decoration: none;
   display: inline-block;
   padding: 6px 16px;
 }
+
 .Bnp a:hover {
   background-color: #ffc423;
   color: #1d6986;
 }
+
 .Bprevious {
   background-color: white;
   color: black;
   font-size: 16px;
   margin-left: 667px;
 }
+
 .Bnext {
   background-color: white;
-  color:black;
+  color: black;
   font-size: 16px;
   margin-left: 5px;
 }
+
 .round {
   border-radius: 50%;
 }
-.Btitle{
+
+.Btitle {
   background-color: #1d6986;
   font-family: Roboto;
-  color:#ffc423;
+  color: #ffc423;
   text-align: center;
   font-size: 15px;
 }
 
-.Btable_contents{
+.Btable_contents {
   background-color: #fff;
   font-family: Roboto;
   font-size: 12px;
