--- a/css/admin_css/style_AdminDash.css
+++ b/css/admin_css/style_AdminDash.css
@@ -1,14 +1,14 @@
-*{
+* {
   margin: 0;
   padding: 0;
   user-select: none;
   box-sizing: border-box;
   /* font-family: Roboto,Roboto Condensed,Generica, sans-serif; */
-  list-style: none;  
+  list-style: none;
 }
 
-body{  
-  font-family: Roboto,Roboto Thin,Generica, sans-serif;
+body {
+  font-family: Roboto, Roboto Thin, Generica, sans-serif;
   background-image: url('../../img/adminBG.png');
   background-size: cover;
   font-size: 100%;
@@ -16,6 +16,7 @@ body{
   width: auto;
   min-height: 100%;
 }
+
 /* nav{
   background: #1d6986;
   box-shadow: 0 10px 20px rgba(0, 0, 0, .15 ),
@@ -73,16 +74,20 @@ nav ul{
   text-align: center;
   z-index: 4;
 } */
-nav ul li{ /*Accounts, Election, Candidates, etc*/
+
+nav ul li {
+  /*Accounts, Election, Candidates, etc*/
   /* float: left; */
   display: inline-block;
-  height: 80px; /*80px ang dati*/
+  height: 80px;
+  /*80px ang dati*/
   background: #1d6986;
   text-align: center;
   /* margin: 0 5px; */
   width: 150px;
 }
-nav ul li a{
+
+nav ul li a {
   color: rgb(255, 255, 255);
   line-height: 70px;
   text-decoration: none;
@@ -91,24 +96,31 @@ nav ul li a{
   letter-spacing: 1px;
   font-family: Roboto Light, sans-serif;
 }
+
 nav ul li a:visited {
   color: #ffffff;
   text-decoration: none;
 }
-nav ul li a:hover{
+
+nav ul li a:hover {
   color: #ffc423;
   text-decoration: none;
 }
-nav ul li a:active{
+
+nav ul li a:active {
   text-decoration: none;
 }
-nav ul li:hover{
+
+nav ul li:hover {
   background-color: #124254;
 }
+
 nav ul li a:active {
   color: green;
 }
-nav ul ul{ /*dropdown container*/
+
+nav ul ul {
+  /*dropdown container*/
   position: absolute;
   top: 90px;
   border-top: 3px solid #124254;
@@ -116,13 +128,16 @@ nav ul ul{ /*dropdown container*/
   visibility: hidden;
   transition: top .3s;
 }
-nav ul ul li{ /*dropdown list*/
- height: 50px;
- position: relative;
- margin: 0px;
- float: none;
- display: list-item;
+
+nav ul ul li {
+  /*dropdown list*/
+  height: 50px;
+  position: relative;
+  margin: 0px;
+  float: none;
+  display: list-item;
 }
+
 /* nav ul ul li a{
   line-height: 50px;
 }
@@ -186,41 +201,42 @@ nav ul ul ul li{
   top: -60px;
   left: 150px;
 } */
-.Ashow, .ADicon{
+
+.Ashow, .ADicon {
   display: none
 }
 
-.nav-toggle1, .nav-toggle2, .nav-toggle3,
-.nav-toggle4, .nav-toggle5, .nav-toggle6{
+.nav-toggle1, .nav-toggle2, .nav-toggle3, .nav-toggle4, .nav-toggle5, .nav-toggle6 {
   display: none;
 }
+
 /* .fa-plus{
   font-size: 15px;
   margin-left: 40px;
 } */
 
 @media all and (max-width: 968px) {
-  nav ul{
+  nav ul {
     margin-right: 0px;
     margin-left: 0px;
     float: left;
   }
-  nav .aLogo{
+  nav .aLogo {
     margin-bottom: 3%;
     width: auto;
     float: left;
   }
-  .Ashow + a, ul{
+  .Ashow+a, ul {
     display: none;
   }
-  nav ul li,nav ul ul li{
+  nav ul li, nav ul ul li {
     display: block;
     width: 100%;
   }
-  nav ul li a:hover{
+  nav ul li a:hover {
     box-shadow: none;
   }
-  .Ashow{
+  .Ashow {
     display: block;
     color: #ffffff;
     font-size: 1.2em;
@@ -228,12 +244,12 @@ nav ul ul ul li{
     line-height: 70px;
     cursor: pointer;
   }
-  .Ashow:hover{
-    color:white;
+  .Ashow:hover {
+    color: white;
   }
-  .ADicon{
+  .ADicon {
     display: block;
-    color:#ffffff;
+    color: #ffffff;
     position: absolute;
     top: 0;
     right: 40px;
@@ -241,7 +257,7 @@ nav ul ul ul li{
     cursor: pointer;
     font-size: 25px;
   }
-  nav ul ul{
+  nav ul ul {
     top: 70px;
     border-top: 0px;
     border-bottom: 0px;
@@ -251,7 +267,7 @@ nav ul ul ul li{
     opacity: 1;
     visibility: visible;
   }
-  nav ul ul a{
+  nav ul ul a {
     left: 0;
   }
   /* nav ul ul ul a{
@@ -260,25 +276,28 @@ nav ul ul ul li{
   nav ul ul ul li{
     position: static;
   } */
-  [id^=btn]:checked + ul{
+  [id^=btn]:checked+ul {
     width: 100%;
     left: 0;
     display: block;
   }
-  nav ul ul li{
+  nav ul ul li {
     border-top: 0px;
     border-bottom: 0px;
   }
-  span.cancel:before{
+  span.cancel:before {
     content: '\f00d';
-  } 
+  }
 }
-p{
+
+p {
   font-size: 30px;
   font-weight: 500;
   font-family: Generica regular, sans-serif;
 }
+
 /* Container for flexboxes */
+
 section {
   display: -webkit-flex;
   display: flex;
@@ -286,7 +305,8 @@ section {
   margin-top: 100px;
   float: left;
 }
-article p{
+
+article p {
   font-family: Roboto regular, sans-serif;
   color: white;
   font-weight: inherit;
@@ -294,7 +314,8 @@ article p{
   letter-spacing: 3px;
   position: relative;
 }
-article h1{
+
+article h1 {
   font-family: Generica regular, sans-serif;
   color: #ffc423;
   font-weight: inherit;
@@ -303,46 +324,55 @@ article h1{
   letter-spacing: 3px;
   margin-top: 10px;
 }
+
 /* Style the content */
+
 article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
   padding: 10px;
 }
+
 /*For logos on top of welcome banner*/
-img.logos{
+
+img.logos {
   float: left;
   padding-left: 10px;
   height: 90px;
   width: 100px;
   margin-bottom: 2em;
 }
-.logo-container{
-  position:relative;
+
+.logo-container {
+  position: relative;
   /* float: left; */
   display: -webkit-flex;
   display: flex;
   margin-left: 0px;
   margin-top: 0px;
   max-width: 700px;
-} 
+}
+
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
+
 @media (max-width: 600px) {
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
   }
-  .ADcountdown{
+  .ADcountdown {
     font-size: auto;
   }
-  #AD-CD-contents{
+  #AD-CD-contents {
     display: block;
     font-size: auto;
   }
 }
+
 /*countdown*/
-aside{
+
+aside {
   color: #333;
   float: left;
   text-align: center;
@@ -354,6 +384,7 @@ aside{
   max-width: 500px;
   float: right;
 }
+
 #AD-CD-headline {
   font-weight: normal;
   letter-spacing: .125rem;
@@ -362,13 +393,15 @@ aside{
   color: black;
   margin-bottom: .8em;
 }
-#AD-CD-contents{
+
+#AD-CD-contents {
   /* max-width: 90%; */
   border: 1px solid #ffc423;
   border-width: 3px;
   text-align: center;
   padding: 0;
 }
+
 div li {
   display: inline-block;
   font-size: 1em;
@@ -377,25 +410,28 @@ div li {
   text-transform: uppercase;
   color: rgb(255, 255, 255);
 }
+
 div li span {
   display: block;
   font-size: 2.5rem;
-
 }
-aside p.Aelec-guide-txt{
+
+aside p.Aelec-guide-txt {
   font-family: Roboto Regular, sans-serif;
   text-align: justify;
   font-size: 1em;
   margin-top: 1em;
   margin-bottom: 0;
 }
-#ADaside-container{
+
+#ADaside-container {
   min-height: 100%;
   /* overflow: auto; */
   padding-bottom: 50px;
 }
 
 /*footer*/
+
 /* .footer {
   position: fixed;
   left: 0;
@@ -415,15 +451,17 @@ div p.footer-txt{
   font-size: 10px;
   color: #ffffff;
 } */
-nav img.user-profile{
+
+nav img.user-profile {
   margin-top: 0;
   height: 40px;
   width: 40px;
 }
 
 /*Datatable*/
+
 div.container {
-  background-color:#dddddd;
+  background-color: #dddddd;
   padding: 1rem;
   margin-top: 3%;
   margin-bottom: 3%;
@@ -433,6 +471,7 @@ div.container {
   opacity: 80%;
   font-size: 10ptrem;
 }
+
 #ADdataTable {
   border-collapse: collapse !important;
   table-layout: auto;
@@ -441,6 +480,7 @@ div.container {
   opacity: 100%;
   width: 100% !important;
 }
+
 #ADdataTable2 {
   border-collapse: collapse !important;
   table-layout: auto;
@@ -449,6 +489,7 @@ div.container {
   opacity: 100%;
   width: 100% !important;
 }
+
 thead {
   width: 100%;
   color: #EEEEEE;
@@ -456,9 +497,11 @@ thead {
   text-align: center;
   opacity: 100%;
 }
+
 thead input {
   width: 100%;
 }
+
 th {
   color: #ffffff;
   background-color: #18566e;
@@ -466,18 +509,20 @@ th {
   font-size: 10pt;
   font-family: Roboto regular, sans-serif;
   text-transform: uppercase;
-  letter-spacing: 2px; 
+  letter-spacing: 2px;
   border: 1px solid #124254 !important;
 }
+
 td {
-    border: 1px solid #124254;
-    padding: 0px;
-    max-width: 150px;
-    max-height: 150px;
-    overflow: hidden;
-    font-size: 10pt;
+  border: 1px solid #124254;
+  padding: 0px;
+  max-width: 150px;
+  max-height: 150px;
+  overflow: hidden;
+  font-size: 10pt;
 }
-#ADheader{
+
+#ADheader {
   position: relative;
   z-index: -1;
   padding: 6px;
@@ -487,12 +532,14 @@ td {
   font-family: Roboto Regular, sans-serif;
   letter-spacing: 6px;
 }
-h2.aHeader-txt{
+
+h2.aHeader-txt {
   color: #ffc423;
   font-size: 24px;
   margin-top: .5%;
   margin-bottom: .5%;
 }
-.row{
+
+.row {
   margin: 0;
 }
