--- a/css/student_css/bootstrap_studNav.css
+++ b/css/student_css/bootstrap_studNav.css
@@ -243,7 +243,8 @@ td, th {
   .navbar {
     display: none;
   }
-  .btn>.caret, .dropup>.btn>.caret {
+  .btn>.caret, 
+  .dropup>.btn>.caret {
     border-top-color: #000 !important;
   }
   .label {
