Remove border from message boxes

--- a/css/session_modal.css
+++ b/css/session_modal.css
@@ -29,7 +29,7 @@ body {}
 
 .F-modal-content-error {
   z-index: 1000;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width: 35%;
   margin: auto;
   background-color: #f8f8f8;
