--- a/css/admin_css/style_studAcc.css
+++ b/css/admin_css/style_studAcc.css
@@ -292,7 +292,7 @@ nav ul ul ul li {
 /*-------Student Management//Vote summary------*/
 
 nav h4 {
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   font-weight: inherit;
   font-size: 100%;
   margin-bottom: 0px;
@@ -311,7 +311,7 @@ nav h5 {
   font-size: 100%;
   margin-bottom: 0px;
   letter-spacing: 6px;
-  font-family: Generica regular, sans-serif;
+  font-family: 'genericaregular', sans-serif;
 }
 
 .cnavie ul li a {
@@ -319,15 +319,17 @@ nav h5 {
 }
 
 .cheader {
-  z-index: 100;
+  position: relative;
+  z-index: -1;
   padding: 1px 1px;
   font-size: 35px;
   background: #124254;
-  color: #f1f1f1;
+  color: #ffc423;
   width: 100%;
   text-align: center;
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   letter-spacing: 6px;
+  text-transform: uppercase;
 }
 
 .pagination>li {
@@ -354,7 +356,7 @@ iframe {
 }
 
 .btn {
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   display: inline-block;
   padding: 6px 12px;
   margin: 0px;
