--- a/css/admin_css/style2_actLogs.css
+++ b/css/admin_css/style2_actLogs.css
@@ -16,173 +16,6 @@ body {
   width: auto;
 }
 
-/* nav{
-  background: #1d6986;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, .15 ),
-              0 3px 6px rgba(0, 0, 0, .23);
-  width: auto;
-  z-index: 3;
-}
-nav:after{
-  content: '';
-  clear: both;
-  display: table;
-}
-nav h2{
-  font-family: Roboto Regular, sans-serif;
-  font-weight: inherit;
-  font-size: 100%;
-  margin-bottom: 0px;
-  letter-spacing: 6px;
-  color: #ffffff;
-}
-nav h3{
-  margin-top: 0px;
-  color: #ffffff;
-  padding-top: 5px;
-  font-weight: inherit;
-  font-size: 100%;
-  margin-bottom: 0px;
-  letter-spacing: 6px;
-  font-family: Generica regular, sans-serif;
-}
-nav .logo{
-  float: left;
-  position: relative;
-  line-height: 80px;
-  margin-top: 5px;
-  margin-left: 40px;
-}
-nav ul{
-  float: right;
-  padding: 0;
-  height: 80px;
-  margin-bottom: 0;
-  list-style: none;
-  position: relative;
-  text-align: center;
-  z-index: 4;
-}
-nav ul li{
-  display: inline-block;
-  height: 80px;
-  background: #1d6986;
-  text-align: center;
-  width: 150px;
-}
-nav ul li a{
-  color: rgb(255, 255, 255);
-  line-height: 70px;
-  text-decoration: none;
-  font-size: 130%;
-  padding: 8px 15px;
-  letter-spacing: 1px;
-  font-family: Roboto Light, sans-serif;
-}
-nav ul li a:visited {
-  color: #ffffff;
-  text-decoration: none;
-}
-nav ul li a:hover{
-  color: #ffc423;
-  text-decoration: none;
-}
-nav ul li a:active{
-  text-decoration: none;
-}
-nav ul li:hover{
-  background-color: #124254;
-}
-nav ul li a:active {
-  color: green;
-}
-nav ul ul{
-  position: absolute;
-  top: 90px;
-  border-top: 3px solid #124254;
-  opacity: 0;
-  visibility: hidden;
-  transition: top .3s;
-}
-nav ul ul li{
- height: 50px;
- position: relative;
- margin: 0px;
- float: none;
- display: list-item;
-}
-nav ul ul li a{
-  line-height: 50px;
-}
-nav ul ul li .logout::before {
-  content: "\f2f5";
-  font-family: "Font Awesome 5 Free";
-  padding: 0 10px 0 0;
-}
-nav ul ul li a:link{
-  color:rgb(0, 0, 0);
-}
-nav ul ul li a:visited {
-  color: black;
-  text-decoration: none;
-}
-nav ul ul li a:hover{
-  color: #1b1b1b;
-  box-shadow: none;
-  text-decoration: none;
-}
-nav ul ul li:hover{
-  background-color: #e0a900;
-  text-decoration: none;
-}
-nav ul ul li a:active{
-  color: #1b1b1b;
-  box-shadow: none;
-  text-decoration: none;
-}
-nav ul ul ul{
-  border-top: none;
-}
-nav ul ul ul li{
-  position: relative;
-  top: -60px;
-  left: 150px;
-}
-nav ul li:hover > ul{
-  top: 70px;
-  opacity: 1;
-  visibility: visible;
-}
-nav ul ul li{
-  background: #ffc423;
-  position: relative;
-  margin: 0px;
-  width: 150px;
-  font-size: 0.8em;
-  float: none;
-  display: list-item;
-  border-bottom: 1px solid rgba(0,0,0,0.3);
-  z-index: 1;
-}
-nav ul ul li a{
-  line-height: 50px;
-  font-family: Roboto bold, sans-serif;
-}
-nav ul ul ul li{
-  position: relative;
-  font-size: 1em;
-  top: -60px;
-  left: 150px;
-}
-.show,.icon,input{
-  display: none;
-} */
-
-/* .fa-plus{
-  font-size: 15px;
-  margin-left: 40px;
-} */
-
 @media all and (max-width: 968px) {
   nav ul {
     margin-right: 0px;
@@ -356,6 +189,23 @@ iframe {
   margin: 0px 15px 15px 25px;
 }
 
+@media only screen and (max-width: 600px) {
+  .btn-button1 {
+    margin: 25px 2px 5px 0px!important;
+  }
+  .btn-button2 {
+    margin: 0px 500px 5px 0px!important;
+  }
+  .btn-button3 {
+    margin: 0px 0px 15px 0px!important;
+  }
+  .btn-button4 {
+    width: 25% !important;
+    margin: 30px 15px 10px 0px!important;
+  }
+  
+}
+
 /*BUTTON FOR SIGNATORY*/
 
 .btn-button3 {
@@ -409,14 +259,20 @@ iframe {
 
 div.container {
   padding: 2rem;
-  background-color: #dddddd;
+  background: rgba(255, 255, 255, 0.7);
   margin-top: 3%;
   margin-bottom: 3%;
   border: 2px solid #124254;
   width: 80%;
   height: auto;
-  opacity: 80%;
-  font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 600px) {
+  div.container {
+    margin: 0px 0px 0px 0px;
+    width: 100%;
+    height: fit-content;
+  }
 }
 
 #datatable {
@@ -425,7 +281,9 @@ div.container {
   font-family: Roboto regular, sans-serif;
   border-collapse: collapse;
   table-layout: auto;
+  margin: 0px;
   text-align: center;
+  background: rgba(255, 255, 255, 0.6);
 }
 
 table.center {
